<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tcp_server</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="pc-meccatronica@todo.todo">pc-meccatronica</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>      <!--dipendenze aggiunte per farle girare nel nodo-->
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
